fix(demo): Fix error text overflow
Some very long URLs can appear in the error text, and word wrapping is
very helpful.  This change sets styles on the element to wrap text
anywhere.

--- a/demo/demo.less
+++ b/demo/demo.less
@@ -153,6 +153,10 @@ html, body {
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
+
+  /* Some very long URLs can appear in the error text, and word wrapping is very
+   * helpful. */
+  overflow-wrap: anywhere;
 }
 
 .input-disabled {
